--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,32 @@
 <p>
   Start editing to see some magic happen :)
 </p>
+
+<h3 class="first">Basic</h3>
+<div class="p-grid">
+    <div class="p-col-fixed">
+      <button pButton type="button" icon="pi pi-chevron-down" label="Expand All" (click)="expandAll()"></button>
+    </div>
+    <div class="p-col-fixed">
+      <button pButton type="button" icon="pi pi-chevron-right" label="Collapse All" (click)="collapseAll()"></button>
+    </div>
+  </div>
+<p-treeTable [value]="files1">
+    <ng-template pTemplate="header">
+        <tr>
+            <th>Name</th>
+            <th>Size</th>
+            <th>Type</th>
+        </tr>
+    </ng-template>
+    <ng-template pTemplate="body" let-rowNode let-rowData="rowData">
+        <tr [ttRow]="rowNode">
+            <td>
+                <p-treeTableToggler [rowNode]="rowNode"></p-treeTableToggler>
+                {{rowData.name}}
+            </td>
+            <td>{{rowData.size}}</td>
+            <td>{{rowData.type}}</td>
+        </tr>
+    </ng-template>
+</p-treeTable>
