--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,10 +7,10 @@
         <span class="custom-message">I am the one who knocks.</span>
         <div class="p-grid">
           <div class="p-col-fixed">
-            <button pButton type="button" label="Next" (click)="Next()"></button>
+            <button pButton type="button" label="Next" (click)="next()"></button>
           </div>
           <div class="p-col-fixed">
-            <button pButton type="button" label="Previous" (click)="Previous()"></button>
+            <button pButton type="button" label="Previous" (click)="previous()"></button>
           </div>
         </div>
     </ng-template>
