--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <p>
 	Start editing to see some magic happen :)
 </p>
-<p-messages severity="info">
+<p-messages [(value)]="msgs">
     <ng-template pTemplate>
         <img src="assets/showcase/images/demo/organization/walter.jpg" width="32" />
         <span class="custom-message">I am the one who knocks.</span>
