--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,22 @@
 <p>
 	Start editing to see some magic happen :)
 </p>
-<p-messages [(value)]="msgs">
-    <ng-template pTemplate>
-        <img src="assets/showcase/images/demo/organization/walter.jpg" width="32" />
-        <span class="custom-message">I am the one who knocks.</span>
-        <div class="p-grid">
-          <div class="p-col-fixed">
-            <button pButton type="button" label="Next" (click)="next()"></button>
-          </div>
-          <div class="p-col-fixed">
-            <button pButton type="button" label="Previous" (click)="previous()"></button>
-          </div>
+<p-messages [key]="msg.key"></p-messages>
+
+<p-messages severity="info">
+    <ng-template let-message pTemplate="contentTemplate">
+        <div style="text-align: center">
+            <i class="pi pi-exclamation-triangle" style="font-size: 3em"></i>
+            <h3>{{message.summary}}</h3>
+            <p>{{message.detail}}</p>
+        </div>
+        <div class="p-grid ui-fluid">
+            <div class="p-col-6">
+                <button type="button" pButton (click)="onConfirm()" label="Yes" class="ui-button-success"></button>
+            </div>
+            <div class="p-col-6">
+                <button type="button" pButton (click)="onReject()" label="No" class="ui-button-secondary"></button>
+            </div>
         </div>
     </ng-template>
 </p-messages>
