--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,32 +1,25 @@
 <p>
-	Start editing to see some magic happen :)
+	A news is displayed every 5s and disappears when expired after 60s.
 </p>
-<p-messages [key]="msg.key"></p-messages>
-
-<p-messages severity="info">
-    <ng-template let-message pTemplate="contentTemplate">
-        <div style="text-align: center">
-            <i class="pi pi-exclamation-triangle" style="font-size: 3em"></i>
-            <h3>{{message.summary}}</h3>
-            <p>{{message.detail}}</p>
-        </div>
-        <div class="p-grid ui-fluid">
-            <div class="p-col-6">
-                <button type="button" pButton (click)="onConfirm()" label="Yes" class="ui-button-success"></button>
-            </div>
-            <div class="p-col-6">
-                <button type="button" pButton (click)="onReject()" label="No" class="ui-button-secondary"></button>
-            </div>
-        </div>
-    </ng-template>
-</p-messages>
-
-<h3 class="first">Basic</h3>
 <div class="p-grid">
 	<div class="p-col-fixed">
-		<button pButton type="button" label="Start" (click)="start()"></button>
+		<button pButton type="button" label="Start" (click)="onStartButtonClicked()"></button>
 	</div>
 	<div class="p-col-fixed">
-		<button pButton type="button" label="Stop" (click)="stop()"></button>
+		<button pButton type="button" label="Stop" (click)="onNextButtonClicked()"></button>
+	</div>
+  	<div class="p-col-fixed">
+		<button pButton type="button" label="Add a News" (click)="onAddButtonClicked()"></button>
 	</div>
 </div>
+
+<p-messages [escape]="false" (valueChange)="onManuallyClosed()"></p-messages>
+<h2>Notification list count {{notificationCount}}</h2> 
+<div class="p-grid" *ngIf="isNewDisplayed">
+  <div class="p-col-fixed">
+		<button pButton type="button" label="Previous" (click)="onPreviousButtonClicked()"></button>
+	</div>
+	<div class="p-col-fixed">
+		<button pButton type="button" label="Next" (click)="onNextButtonClicked()"></button>
+	</div>	
+</div>   
